# glassbox

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml.disabled  deploy.yml  infra-diff.yml
apps/api/: .dockerignore  .env.example  Dockerfile  Makefile  go.mod  go.sum
apps/infrastructure/: cdk.context.json  cdk.json  package-lock.json  package.json
apps/infrastructure/cdk.out/: GlassBox-staging-Auth.assets.json  GlassBox-staging-Auth.template.json  GlassBox-staging-Cache.assets.json  GlassBox-staging-Cache.template.json  GlassBox-staging-Compute.assets.json  GlassBox-staging-Compute.template.json  manifest.json  (+11 more)
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/workers/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  test_full_execution.py
apps/workers/agent/: __init__.py  executor.py  worker.py
apps/workers/file_processor/: __init__.py  worker.py
apps/workers/shared/: __init__.py  config.py  db.py  s3.py  sqs.py
docker/: docker-compose.full.yml  docker-compose.yml  init-db.sql  localstack-init.sh
docs/: CHANGELOG.md  COST_ANALYSIS.md  FRONTEND_CONTEXT.md  PRD.md  ROADMAP.md  TECHNICAL.md
docs/v1/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT_GUIDE.md  INFRASTRUCTURE.md  README.md  SERVICES.md  WEBSOCKET.md
docs/v2/: API_CLIENT.md  ARCHITECTURE.md  AUTHENTICATION.md  COMPONENTS.md  HOOKS.md  README.md  ROADMAP.md  STATE.md  VIEWS.md  WEBSOCKET.md
scripts/: check-deployment.sh  dev-setup.sh  e2e-tests.sh
(+183 files in other folders)
